hard-gists/701904/run.log
=== Docker Run Log for 701904 ===
Started at: Mi 29. Okt 16:57:49 CET 2025

[2025-10-29 16:57:50] START: Running container for 701904
[2025-10-29 16:57:50] SUCCESS: Container 4bd94d234511cac4379ceaddabd5acb33537621a94cc0151fcf4e3c92ab9bd82 started for 701904
=== Container logs for 701904 ===
  File "/snippet.py", line 46
    print "Error: cannot write stream"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 701904 ===
[2025-10-29 16:57:52] INFO: Container 4bd94d234511cac4379ceaddabd5acb33537621a94cc0151fcf4e3c92ab9bd82 has stopped
